# ZYNIQ-CREW-7

./: .env.example  .gitignore  AGENT_GRAPH_CODE_CANVAS_COMPLETE.md  ALEMBIC_MIGRATION_COMPLETE.md  API_TEST_REPORT.md  BLUEPRINT_IMPLEMENTATION_COMPLETE.md  CRYPTO_IMPLEMENTATION_STATUS.md  FINAL_COMPLETION_REPORT.md  HACKATHON_QUICK_REF.md  LANDING_PAGE_V3_REFINEMENTS.md  PORTFOLIO_COMPONENTS_SUMMARY.md  README.md  ROBOT_FACE_STYLE.md  SESSION_COMPLETION_SUMMARY.md  UPDATED_PRESENTATION_PHILOSOPHY.md  WEBSOCKET_INTEGRATION.md  cleanup.sh  package-lock.json  reset-db.sh  start.ps1  start.sh  test-services.sh
backend/: ALEMBIC_SETUP.md  README.md  alembic.ini  db-migrate.sh  pyproject.toml  requirements.txt  run-tests.sh  test-router.sh  worker.py
backend/alembic/: env.py
backend/alembic/versions/: c97d607f592c_initial_migration_with_all_models.py
backend/app/: config.py  deps.py  main.py
backend/app/core/: __init__.py  crypto_config.py
backend/docker/: Dockerfile.api  compose.override.yml  compose.yml  nginx.conf  otel-config.yaml
backend/migrations/: 20251108_create_crews_table.sql  20251109_add_auth_org.sql  20251114_add_crew_graphs.sql  20251115_add_crypto_tables.sql  20251115_add_run_tokens.sql  20251115_add_user_role.sql  20251116_add_agents.sql
backend/tests/: README.md  manual_agent_test.py  simple_test.py  test_agents_api.py  test_agents_simple.py  test_api_flow.py  test_crew_portfolio.py  test_crew_portfolio_live.py  test_e2e.py  test_fullstack_crew_live.py  test_memory_api.py  test_metadata_api.py
backend/tools/: spawn_crew_service.py
(+255 files in other folders)
